java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testCastOrMethodInvocation58494b-hints.pass
Cast ...o to JButton
Create method doStuff(java.lang.Object) in org.netbeans.test.java.hints.CastOrMethodInvocation58494b
